// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parcel-alpha 1`] = `
Object {
  "index.html": "index.html",
  "script.js": "script.1212fd4f.js",
}
`;

exports[`parcel-nightly 1`] = `
Object {
  "index.html": "index.html",
  "script.js": "script.b1e49460.js",
}
`;
